--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,24 @@
   src: url("/fonts/Tangerine/Tangerine-Bold.ttf") format("truetype");
   font-weight: 700;
 }
+
+@font-face {
+  font-family: "EkkamaiNew";
+  font-display: swap;
+  src: url("/fonts/EkkamaiNew/EkkamaiNew-Thin.ttf") format("truetype");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "EkkamaiNew";
+  font-display: swap;
+  src: url("/fonts/EkkamaiNew/EkkamaiNew-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "EkkamaiNew";
+  font-display: swap;
+  src: url("/fonts/EkkamaiNew/EkkamaiNew-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
