--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+div {
+  /* color: #1f2937; */
+  /* color: #374151; */
+  color: #4b5563;
+  /* color: #6b7280; */
+}
+
 @font-face {
   font-family: "Tangerine";
   font-display: swap;
