--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,3 +50,7 @@ div {
   src: url("/fonts/EkkamaiNew/EkkamaiNew-Bold.ttf") format("truetype");
   font-weight: 700;
 }
+
+.heading2 {
+  @apply text-xl md:text-3xl  font-semibold;
+}
